@@ -1,5 +1,10 @@
 2006-03-29  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-prefs.c:
+	Don't have a modal preferences dialog (#314595).
+
+2006-03-29  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-main.c:
 	Don't show the main window until there is nothing else that could
 	go wrong (#321859).
